After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768433 - NetworkManager looking for signal strength in 'wlan0' instead of the apropriate 'wlxc46e1f1abe34"
NetworkManager looking for signal strength in 'wlan0' instead of the apropria...
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: Wi-Fi
1.2.x
Other Linux
: Normal minor
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-07-05 09:30 UTC by Max
Modified: 2016-07-08 11:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
The syslog before and after using "systemctl restart network-manager.service" (735.97 KB, text/plain)
2016-07-06 09:06 UTC, Max
  Details
[PATCH] platform: wifi: drop old wifi data when an interface is renamed (3.53 KB, patch)
2016-07-06 16:12 UTC, Beniamino Galvani
none Details | Review

Description Max 2016-07-05 09:30:11 UTC
I get this error in my log a lot:
"Jun 21 15:04:00 basspistol NetworkManager[834]: <warn> [1466514240.9769] (wlan0): error getting signal strength: No such device"

My wireless device (TP-Link 150Mbps Wireless N Nano USB Adapter) is getting a very funky name: "wlxc46e1f1abe34". It's not too much of a problem since the connection is established and working, but it renders the wifi-strength icon as if it was receiving maximum signal strength.

Restarting the network-manager with: "sudo systemctl restart network-manager.service" solves the problem.

Not sure if it is related, but i am also affected by this bug:
https://bugs.launchpad.net/ubuntu/+source/network-manager/+bug/1589401
Even after upgrading to: network-manager-gnome:amd64 (1.2.0-0ubuntu0.16.04.1, 1.2.0-0ubuntu0.16.04.3) on 2016-06-19

Let me know if there is any complementary information I can provide.

ProblemType: Bug
DistroRelease: Ubuntu 16.04
Package: network-manager 1.2.0-0ubuntu0.16.04.2
ProcVersionSignature: Ubuntu 4.4.0-24.43-lowlatency 4.4.10
Uname: Linux 4.4.0-24-lowlatency x86_64
NonfreeKernelModules: nvidia_uvm nvidia_modeset nvidia
ApportVersion: 2.20.1-0ubuntu2.1
Architecture: amd64
CurrentDesktop: XFCE
Date: Tue Jun 21 15:04:46 2016
IfupdownConfig:
 # interfaces(5) file used by ifup(8) and ifdown(8)
 auto lo
 iface lo inet loopback
InstallationDate: Installed on 2016-04-21 (60 days ago)
InstallationMedia: Ubuntu-Studio 16.04 LTS "Xenial Xerus" - Release amd64 (20160420.1)
IpRoute:
 default via 10.42.0.1 dev wlxc46e1f1abe34 proto static metric 600
 10.42.0.0/24 dev wlxc46e1f1abe34 proto kernel scope link src 10.42.0.22 metric 600
 169.254.0.0/16 dev wlxc46e1f1abe34 scope link metric 1000
NetworkManager.state:
 [main]
 NetworkingEnabled=true
 WirelessEnabled=true
 WWANEnabled=true
RfKill:

SourcePackage: network-manager
UpgradeStatus: No upgrade log present (probably fresh install)
nmcli-dev:
 DEVICE TYPE STATE DBUS-PATH CONNECTION CON-UUID CON-PATH
 wlxc46e1f1abe34 wifi connected /org/freedesktop/NetworkManager/Devices/0 sakrecoer 1 7bfae379-b282-4335-8bfe-f1f55229ad51 /org/freedesktop/NetworkManager/ActiveConnection/0
 enp3s0 ethernet unavailable /org/freedesktop/NetworkManager/Devices/1 -- -- --
 lo loopback unmanaged /org/freedesktop/NetworkManager/Devices/2 -- -- --
nmcli-nm: Error: command ['nmcli', '-f', 'all', 'nm'] failed with exit code 2: Error: Object 'nm' is unknown, try 'nmcli help'.
Comment 1 Max 2016-07-05 09:34:31 UTC
See here for more information and attachments about the bug: https://bugs.launchpad.net/ubuntu/+source/network-manager/+bug/1594814

I copied the original report by Set Hallstrom, because I am having the same problem on Kubuntu 16.04 using the TL-WN725N adapter.
Comment 2 Beniamino Galvani 2016-07-05 11:53:23 UTC
Can you please set level=TRACE in the [logging] section of /etc/NetworkManager/NetworkManager.conf, restart the service, reproduce the problem and attach NetworkManager logs? Thanks!
Comment 3 Max 2016-07-06 09:06:52 UTC
Created attachment 330934 [details]
The syslog before and after using "systemctl restart network-manager.service"

I attached the whole file, because I was not sure which part is important to you. You can clearly see when I restarted the service, since the warnings stop after that point.

Don't know if this information is relevant, but after restarting the signal strength is greyed out.
Comment 4 Beniamino Galvani 2016-07-06 14:11:16 UTC
(In reply to Max from comment #3)
> Created attachment 330934 [details]
> The syslog before and after using "systemctl restart network-manager.service"
> 
> I attached the whole file, because I was not sure which part is important to
> you. You can clearly see when I restarted the service, since the warnings
> stop after that point.

Yes, I see and I can also reproduce the issue. The problem is that we populate WifiData during device creation with the interface name, which is not updated when udev renames the interface.
Comment 5 Beniamino Galvani 2016-07-06 16:12:39 UTC
Created attachment 330957 [details] [review]
[PATCH] platform: wifi: drop old wifi data when an interface is renamed
Comment 6 Thomas Haller 2016-07-07 12:27:14 UTC
lgtm
Comment 7 Francesco Giudici 2016-07-08 10:15:12 UTC
lgtm