platform: wifi: drop old wifi data when an interface is renamed

Drop the old wifi data when the interface is renamed, otherwise WEXT
methods would use the old name.

https://bugzilla.gnome.org/show_bug.cgi?id=768433
(cherry picked from commit 45484af2afd33cf1b0846c8e6f81f055e64568fd)