src/platform/wifi/wifi-utils.h
@@ -33,6 +33,10 @@ gboolean wifi_utils_is_wifi (const char *iface, const char *sysfs_path);
 
 WifiData *wifi_utils_init (const char *iface, int ifindex, gboolean check_scan);
 
+int wifi_utils_get_ifindex (WifiData *data);
+
+const char *wifi_utils_get_iface (WifiData *data);
+
 void wifi_utils_deinit (WifiData *data);
 
 NMDeviceWifiCapabilities wifi_utils_get_caps (WifiData *data);
